--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ ul {
 	padding: 0px;
 }
 
-.nav-bar {
+.navbar {
 	width: 100%;
 	height: 50px;
 	background: #2196f3;
@@ -18,14 +18,15 @@ ul {
 	position: sticky;
 }
 
-.nav-bar li {
-	float : right;
+.navbar li {
+	float: left;
 }
 
-.nav-bar a:link, a:visited {
+.navbar a:link, a:visited {
 	display: block;
 	color: #fff;
-	width: 110px;
+	width: 100px;
+	letter-spacing: 0.1em;
 	text-decoration: none;
 	text-transform: uppercase;
 	font-size: 13px;
@@ -35,7 +36,7 @@ ul {
 	
 }
 
-.nav-bar a:active, a:hover {
+.navbar a:active, a:hover {
 	color: #f77;
 }
 
@@ -57,21 +58,26 @@ ul {
 
 #image {
 	padding-top: 10px;
-	padding-left: 100px;
+	
 	
 }
 
 .btn-info {
 	margin: 10px;
 	height: 50px;
-	margin-left: 50%;
+	background-color: #2196f3;
 	margin-top: 50px;
 }
 
+.btn-info:hover {
+	background-color: #fcd93bff;
+	border: #fcd93bff;
+}
+
 #down-section {
-	background-color: #111333/*#fcd93bff*/;
+	background-color: #fcd93bff;
 	margin-top: 8%;
-	color: white;
+	color: #000;
 	height: auto;
 }
 
@@ -91,4 +97,22 @@ ul {
 	padding: 8px;
 	padding-top: 10px; 
 	color: #555;
+}
+
+.footer {
+   color: white;
+   background-color: #2196f3;
+   width: 100%;
+   left: 0;
+   bottom: 0;
+   text-align: left;
+   margin-top: 7%;
+   padding: 20px;
+   color: #333;
+   font-size: 16px;
+
+}
+
+.icon:hover, .icon:active {
+	color: #fff;
 }
