--- a/index.css
+++ b/index.css
@@ -45,6 +45,7 @@ ul {
 	padding-top: 30px;
 	background-color: lavender;
 	height: auto;
+	margin-top: 15%;
 
 
 }
@@ -87,14 +88,9 @@ ul {
 	line-height: 30px
 }
 
-.screenshots {
-	background-color: #fff;
-	padding: 8px;
+.web-app {
 	margin-top: 5%;
-}
-
-.web-app, .mobile-app {
-	padding-left: 10%;
+	padding-left: 5%;
 }
 
 .mobile-app {
